added extra curricular

--- a/sections/extracurricular.tex
+++ b/sections/extracurricular.tex
@@ -4,8 +4,12 @@
 \denseouterlist{
 
 \entrymid[\textbullet]
+{Vice President Social - ECE Society}{Winter 2020\textendash Current}
+{Chosen as the Vice President of Social affairs by the University of Waterloo Electrical and Computer Engineering Society. Organizes all social events enjoyed by hundreds of ECE students on a weekly basis}
+
+\entrymid[\textbullet]
 {Class Representative}{Winter 2020\textendash Current}
-{Elected as Class Representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Mediates dialogue between Electrical and Computer Engineering students and professors in order to maintain peaceful course progression}
+{Elected as Class Representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Mediates dialogue between ECE students and professors in order to maintain peaceful course progression}
 
 \entrymid[\textbullet]
 {Engineering Society Representative}{Winter 2020\textendash Current}
