--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
 % Heading
 \headinginline{Sathira Katugaha}{
-    Website: \website{example.com} \\ 
+    Website: \website{sghmk12.github.io} \\ 
     Email: \email{sgkatuga@uwaterloo.ca} \\
     LinkedIn: \linkedin{sathirakatugaha} \\
     GitHub: \github{sghmk12}
