--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,9 +7,9 @@
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
 	{Lead Front-end Engineer}{Summer 2020\textendash Present}
 \innerlist{
-	\entry{Helped found Kinme Technologies by engineering all front end facets of the platform independently from scratch}
-	\entry{Built the website using \textbf{React.js} and the mobile application using \textbf{React-Native}}
-	\entry{Used Sprint style development}
+	\entry{Helped found Kinme Technologies, a software engineering company for real estate, by engineering all front end facets of the initial platform independently from scratch}
+	\entry{Built the website using \textbf{React.js} running on an \textbf{express.js} server deployed to an \textbf{AWS EC2} container}
+	\entry{Currently serving a private beta for 100 or so clients}
 	\entry{Managed server calls using \textbf{Axios}, application state using \textbf{Redux} and routing using \textbf{React-Router} and \textbf{React-Navigation}}
 }
 
