--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -10,6 +10,7 @@ See full list of projects on \website{github.com/sghmk12}
 \innerlist{
 	\entry{Two of my peers and I developed the Smart Traffic Monitor to practically apply our knowledge of Matlab and Python to process raw data from users and produce analytics in a meaningful way}
 	\entryextra{Our project consists of a monolithic web application written in Flask which allows users to upload videos of traffic. Our application then analyzes the video and produces a graph of the amounts of cars on the road at any given time in the video}
+	\entryextra{\textbf{Demo:} \url{https://traffic.xor.dev} | \textbf{Git:} \url{https://github.com/SarvathSharma/Smart-Traffic-Control-System}}
 }
 
 \entry{\textbf{Smart Coffee Mug: } Arduino / C++}
@@ -18,6 +19,7 @@ See full list of projects on \website{github.com/sghmk12}
 	\entry {I love coffee, so I decided to make a machine to help drink my coffee safely. The Smart Coffee Mug was developed using an Arduino board programmed in C++ using Onewire libraries to control its components}
 	\entryextra{It consists of a Coffee Cup, a Servo Motor, Temperature Sensor, Touch Sensor and Speaker}
 	\entryextra{First and foremost the mug constantly samples and displays the temperature of the beverage in the mug. It opens the lid of the cup whenever a user picks up the contraption. Furthermore, it keeps the lid open for the beverage inside the mug to cool if the beverage is too hot. Finally, it alerts users who pick up the contraption when it is too hot
+	\entryextra{\textbf{Git:} \url{https://github.com/sghmk12/SmartCoffeeMug}}
     }
 }
 
