edited current experience

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,10 +7,10 @@
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
 	{Lead Front-end Engineer}{Summer 2020\textendash Present}
 \innerlist{
-	\entry{Helped found Kinme Technologies, a software engineering company for real estate, by engineering all front end facets of the initial platform independently from scratch}
-	\entry{Built web app using \textbf{React.js} running on an \textbf{express.js} server deployed to an \textbf{AWS EC2} container}
+	\entry{Helped found Kinme Technologies, a buying and selling platform for real estate services, by engineering all front end facets of the platform independently from scratch}
+	\entry{Built a \textbf{Node.js} web app using \textbf{React.js} running on an \textbf{express.js} server deployed to an \textbf{AWS EC2} container}
 	\entry{Currently serving a private beta for 100 or so clients}
-	\entry{Managed server calls using \textbf{Axios}, application state using \textbf{Redux}, routing using \textbf{React-Router} and UI using \textbf{Material-UI}}
+	\entry{Managed server calls using \textbf{Axios}, application state using \textbf{Redux}, routing using \textbf{React-Router} and UI using \textbf{Material-UI} with \textbf{CSS} styling and regular \textbf{HTML} elements}
 }
 
 \entrybig
