--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,7 +5,7 @@
 
 \entrybig
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
-	{Lead Front-end Engineer}{Summer 2020\textendash Present}
+	{Lead Front-end Engineer}{May 2020\textendash Present}
 \innerlist{
 	\entry{Helped found Kinme Technologies, a buying and selling platform for real estate services, by engineering all front end facets of the platform independently from scratch}
 	\entry{Built a \textbf{Node.js} web app using \textbf{React.js} running on an \textbf{express.js} server deployed to an \textbf{AWS EC2} container}
@@ -15,7 +15,7 @@
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Big Data Tooling Developer}{Fall 2019}
+	{Big Data Tooling Developer}{September 2019\textendash December 2019}
 \innerlist{
 	\entry {Redesigned the front-end of multiple SAP Data Tooling Websites using \textbf{JavaScript} and \textbf{XML}}
 	\entry{Wrote detailed \textbf{JUnit}, \textbf{JavaScript} unit and \textbf{JavaScript} component tests for all features and fixes published to SAP codebases, bringing SAP’s coverage up to an extensive 83.5\% rate}
@@ -26,7 +26,7 @@
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Android Developer}{Winter 2019}
+	{Android Developer}{January 2019\textendash April 2019}
 \innerlist{
 	\entry {Developed algorithms and fixes in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications demoed to customers on a monthly basis, presenting my solutions on calls with upwards of 20 senior developers}
 	\entry{Developed UI and UX of SAP Cloud Android Applications in \textbf{XML} to be more comprehensive for new users}
