--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,10 +7,11 @@
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
 	{Lead Front-end Engineer}{May 2020\textendash Present}
 \innerlist{
-	\entry{Helped found Kinme Technologies, a buying and selling platform for real estate services, by engineering all front end facets of the platform independently from scratch}
-	\entry{Built a \textbf{Node.js} web app using \textbf{React.js} running on an \textbf{express.js} server deployed to an \textbf{AWS EC2} container}
-	\entry{Currently serving a private beta for 100 or so clients}
-	\entry{Managed server calls using \textbf{Axios}, application state using \textbf{Redux}, routing using \textbf{React-Router} and UI using \textbf{Material-UI} with \textbf{CSS} styling and regular \textbf{HTML} elements}
+	\entry{Found Kinme Technologies, a buying and selling platform for real estate services, by engineering all front end facets of the platform independently from scratch}
+	\entry{Constructed web app using \textbf{React.js} running on an \textbf{Express.js} server with an \textbf{NGINX} proxy deployed to an \textbf{AWS EC2} container}
+	\entry{Currently serving a private beta for \textbf{100} or so clients}
+	\entry{App manages AJAX calls via \textbf{Axios}, application state using \textbf{Redux} and routing with \textbf{React-Router}}
+	\entry{Coded in \textbf{Javascript, HTML and CSS} on the \textbf{Node.js} framework}
 }
 
 \entrybig
@@ -28,7 +29,8 @@
 	{\textbf{SAP}}{Waterloo, Ontario}
 	{Android Developer}{January 2019\textendash April 2019}
 \innerlist{
-	\entry {Developed algorithms and fixes in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications demoed to customers on a monthly basis, presenting my solutions on calls with upwards of 20 senior developers}
+	\entry {Developed algorithms in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications}
+	\entry {Demoed to upwards of 20 senior engineers on a monthly basis}
 	\entry{Developed UI and UX of SAP Cloud Android Applications in \textbf{XML} to be more comprehensive for new users}
 	\entry{Debugged Android applications and designed Android \textbf{JUnit} tests for all features and fixes written}
     \entry{Wrote tutorials and documentation using \textbf{HTML} and \textbf{Markdown} on SAP reference web pages for use by future employees and clients}
