project and extra curricular fix

--- a/sections/extracurricular.tex
+++ b/sections/extracurricular.tex
@@ -4,23 +4,19 @@
 \denseouterlist{
 
 \entrymid[\textbullet]
-{Vice President Social - ECE Society}{Winter 2020\textendash Current}
-{Chosen as the Vice President of Social affairs by the University of Waterloo Electrical and Computer Engineering Society. Organizes all social events enjoyed by hundreds of ECE students on a weekly basis}
+{Vice President Social - UW Electrical and Computer Engineering Society}{May 2020\textendash Current}
+{Chosen as Vice President of Social Affairs at the University of Waterloo Electrical and Computer Engineering Society. Organizes weekly social events for UW ECE students of all ages}
 
 \entrymid[\textbullet]
-{Class Representative}{Winter 2020\textendash Current}
-{Elected as Class Representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Mediates dialogue between ECE students and professors in order to maintain peaceful course progression}
+{Class Representative}{January 2020\textendash Current}
+{Elected as Class Representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Mediates dialogue between Electrical and Computer Engineering students and professors in order to maintain peaceful course progression}
 
 \entrymid[\textbullet]
-{Engineering Society Representative}{Winter 2020\textendash Current}
+{Engineering Society Representative}{January 2020\textendash Current}
 {Elected Engineering Society representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Votes on important policies upheld by the University of Waterloo Engineering Society on a semi-monthly basis}
 
 \entrymid[\textbullet]
-{Director of Athletics}{Winter 2020\textendash Winter 2020}
+{Director of Athletics}{January 2020\textendash April 2020}
 {Chosen by the University of Waterloo Engineering Society to be the Director of Athletics for Winter 2020. Organized athletic events for engineering students campus wide throughout the term}
-
-\entrymid[\textbullet]
-{Captain of University of Waterloo Intramural Ultimate Frisbee Team}{Winter 2020\textendash Winter 2020}
-{Led team of 11 students to semi-finals in intramural Ultimate Frisbee games on a bi-weekly basis}
 
 }
