extra curricular fix

--- a/sections/extracurricular.tex
+++ b/sections/extracurricular.tex
@@ -4,8 +4,8 @@
 \denseouterlist{
 
 \entrymid[\textbullet]
-{Vice President Social - UW Electrical and Computer Engineering Society}{May 2020\textendash Current}
-{Chosen as Vice President of Social Affairs at the University of Waterloo Electrical and Computer Engineering Society. Organizes weekly social events for UW ECE students of all ages}
+{Vice President UW Electrical and Computer Engineering Society - Social}{May 2020\textendash Current}
+{Chosen as the Vice President for Social Affairs at the University of Waterloo Electrical and Computer Engineering Society. Organizes weekly social events for UW ECE students of all ages}
 
 \entrymid[\textbullet]
 {Class Representative}{January 2020\textendash Current}
