added phone number

--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
 % Heading
 \headinginline{Sathira Katugaha}{
     Website: \website{sghmk12.github.io} \\ 
+    Phone: \phone{+1 416 731 0593} \\ 
     Email: \email{sgkatuga@uwaterloo.ca} \\
     LinkedIn: \linkedin{sathirakatugaha} \\
-    GitHub: \github{sghmk12}
 }
 
 % Page One
