--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -7,7 +7,7 @@
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
 	{Lead Front-end Engineer}{May 2020\textendash Present}
 \innerlist{
-	\entry{Found Kinme Technologies, a buying and selling platform for real estate services, by engineering all front end facets of the platform independently from scratch}
+	\entry{Helped lead the founding of Kinme, a buying and selling platform for Canadian real estate services, by engineering all front end facets of the platform independently from scratch}
 	\entry{Constructed web app using \textbf{React.js} running on an \textbf{Express.js} server with an \textbf{NGINX} proxy deployed to an \textbf{AWS EC2} container}
 	\entry{Currently serving a private beta for \textbf{100} or so clients}
 	\entry{App manages AJAX calls via \textbf{Axios}, application state using \textbf{Redux} and routing with \textbf{React-Router}}
@@ -16,7 +16,7 @@
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Big Data Tooling Developer}{September 2019\textendash December 2019}
+	{Big Data Tooling Developer (Front-end Engineer)}{September 2019\textendash December 2019}
 \innerlist{
 	\entry {Redesigned the front-end of multiple SAP Data Tooling Websites using \textbf{JavaScript} and \textbf{XML}}
 	\entry{Wrote detailed \textbf{JUnit}, \textbf{JavaScript} unit and \textbf{JavaScript} component tests for all features and fixes published to SAP codebases, bringing SAP’s coverage up to an extensive 83.5\% rate}
@@ -27,7 +27,7 @@
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Android Developer}{January 2019\textendash April 2019}
+	{Android SDK Developer}{January 2019\textendash April 2019}
 \innerlist{
 	\entry {Developed algorithms in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications}
 	\entry {Demoed to upwards of 20 senior engineers on a monthly basis}
