--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,8 @@
 % Heading
 \headinginline{Sathira Katugaha}{
     Website: \website{sghmk12.github.io} \\ 
-    Phone: \phone{+1 416 731 0593} \\ 
-    Email: \email{sgkatuga@uwaterloo.ca} \\
-    LinkedIn: \linkedin{sathirakatugaha} \\
+    Phone: \texttt{+1 416 731 0593} \\ 
+    Email: \email{sathirakatugaha@gmail.com} \\
 }
 
 % Page One
@@ -33,9 +32,9 @@
 \import{sections/}{projects.tex}
 
 % Page Two
-\sidebyside
-    {\import{sections/}{languages.tex}}
-    {\import{sections/}{frameworks.tex}}
+%\sidebyside
+%    {\import{sections/}{languages.tex}}
+%    {\import{sections/}{frameworks.tex}}
 \import{sections/}{awards.tex}
 \import{sections/}{extracurricular.tex}
 
