--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,25 +4,46 @@
 \outerlist{
 
 \entrybig
-	{\textbf{Kinme Technologies}}{Toronto, Ontario}
-	{Lead Front-end Engineer}{May 2020\textendash Present}
+	{\textbf{Facebook/Meta}}{New York, New York}
+	{Front end Engineer}{January 2022\textendash April 2022}
 \innerlist{
-	\entry{Helped lead the founding of Kinme, a buying and selling platform for Canadian real estate services, by engineering all front end facets of the platform independently from scratch}
-	\entry{Constructed web app using \textbf{React.js} running on an \textbf{Express.js} server with an \textbf{NGINX} proxy deployed to an \textbf{AWS EC2} container}
+	\entry{Developed a core infrastructure application from the ground up using \textbf{React.js, Recoil and Flow.js}}
+	\entry{Application consisted of many complex \textbf{graph traversal and manipulation algorithms} which helped process detailed information}
+	\entry{Made use of \textbf{virtualized tables} and other advanced front end technologies}
+	\entry{Developed back-end services to complement web application using \textbf{PHP/Hack}}
+	\entry{Consistently made unique and documented \textbf{architectural design proposals} to larger team in order to facilitate deep discussions about the implementation of \textbf{industry best practices} in complex and obscure algorithms and data structures}
+    \entry{Talked with designers and customers to ensure that product met all use cases and \textbf{accessibility standards} whilst maintaining a high quality user experience}
+}
+
+\entrybig
+	{\textbf{Facebook/Meta}}{New York, New York}
+	{Front end Engineer}{January 2021\textendash April 2021}
+\innerlist{
+	\entry{Created an animated interactive 3D environment on React by using \textbf{Three.js} to load an Autodesk FBX file onto a \textbf{WebGL} engine. Used \textbf{GSAP} to help animate the 3D scene}
+	\entry{Contributed to the open source Mephisto project: \textbf{\url{https://www.github.com/facebookresearch/mephisto}}, a service that allows thousands of users to crowdsource artificial intelligence data}
+	\entry{Developed unique \textbf{end to end testing framework} from scratch using \textbf{Javascript fundamentals} to test monolithic \textbf{Python Flask apps} with \textbf{Node.js concurrency, Jest and Puppeteer}}
+	\entry{Developed command line interfaces for Mephisto to process data using the Python \textbf{Click} framework}
+	\entry{Developed a \textbf{fullstack monolithic web application} for Mephisto using \textbf{Flask and React}. The app was published to a React template found in NPM as \textbf{"cra-template-mephisto-review"}. App includes complex features like a \textbf{modular plug-in architecture}}
+	\entry{Upgraded an existing \textbf{React hook} to allow for more diverse functionality. The hook is published to NPM as \textbf{"mephisto-review-hook"}}
+}
+
+\entrybig
+	{\textbf{Kinme Technologies}}{Toronto, Ontario}
+	{Lead Front end Engineer}{May 2020\textendash December 2020}
+\innerlist{
+	\entry{\textbf{Lead} the founding of Kinme, a buying and selling platform for Canadian real estate services}
+	\entry{Engineered all initial front end facets of the platform \textbf{independently and from scratch} using \textbf{React.js} deployed to an \textbf{Express.js} server with an \textbf{NGINX} proxy on an \textbf{AWS EC2} container}
+	\entry{App manages AJAX calls via \textbf{Axios}, state using \textbf{Redux}, routing with \textbf{React-Router}, and uses \textbf{Material UI}}
 	\entry{Currently serving a private beta for \textbf{100} or so clients}
-	\entry{App manages AJAX calls via \textbf{Axios}, application state using \textbf{Redux} and routing with \textbf{React-Router}}
-	\entry{Coded in \textbf{Javascript, HTML and CSS} on the \textbf{Node.js} framework}
 }
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Big Data Tooling Developer (Front-end Engineer)}{September 2019\textendash December 2019}
+	{Big Data Tooling Developer (Full Stack Developer)}{September 2019\textendash December 2019}
 \innerlist{
 	\entry {Redesigned the front-end of multiple SAP Data Tooling Websites using \textbf{JavaScript} and \textbf{XML}}
 	\entry{Wrote detailed \textbf{JUnit}, \textbf{JavaScript} unit and \textbf{JavaScript} component tests for all features and fixes published to SAP codebases, bringing SAP’s coverage up to an extensive 83.5\% rate}
-	\entry{Added search filters for data queries on websites that display the status of databases, allowing users to see important details such as the amount of cache, numbers of users, and other aspects to help run their businesses
-    }
-    \entry{Programmed API to send out more detailed SQL queries to SAP dataservers using \textbf{JQuery}}
+    \entry{Programmed API in \textbf{Java} to send out more detailed SQL queries to SAP dataservers}
 }
 
 \entrybig
@@ -30,10 +51,8 @@
 	{Android SDK Developer}{January 2019\textendash April 2019}
 \innerlist{
 	\entry {Developed algorithms in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications}
-	\entry {Demoed to upwards of 20 senior engineers on a monthly basis}
 	\entry{Developed UI and UX of SAP Cloud Android Applications in \textbf{XML} to be more comprehensive for new users}
 	\entry{Debugged Android applications and designed Android \textbf{JUnit} tests for all features and fixes written}
-    \entry{Wrote tutorials and documentation using \textbf{HTML} and \textbf{Markdown} on SAP reference web pages for use by future employees and clients}
 }
 
 }
