--- a/sections/extracurricular.tex
+++ b/sections/extracurricular.tex
@@ -4,19 +4,19 @@
 \denseouterlist{
 
 \entrymid[\textbullet]
-{Vice President UW Electrical and Computer Engineering Society - Social}{May 2020\textendash Current}
-{Chosen as the Vice President for Social Affairs at the University of Waterloo Electrical and Computer Engineering Society. Organizes weekly social events for UW ECE students of all ages}
+{Vice President Social, UW Electrical and Computer Engineering Society}{May 2020\textendash August 2021}
+{Chosen as the Vice President for Social Affairs. Organized weekly social events}
 
 \entrymid[\textbullet]
-{Class Representative}{January 2020\textendash Current}
-{Elected as Class Representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Mediates dialogue between Electrical and Computer Engineering students and professors in order to maintain peaceful course progression}
+{Class Representative, UW Electrical and Computer Engineering Class of 2023}{January 2020\textendash December 2020}
+{Mediated dialogue between ECE students and professors in order to maintain efficient course progression}
 
 \entrymid[\textbullet]
-{Engineering Society Representative}{January 2020\textendash Current}
-{Elected Engineering Society representative of the University of Waterloo Electrical and Computer Engineering Class of 2023. Votes on important policies upheld by the University of Waterloo Engineering Society on a semi-monthly basis}
+{UW Engineering Society Representative}{January 2020\textendash April 2020}
+{Elected Engineering Society representative by student body. Voted on important policies on a semi-monthly basis}
 
 \entrymid[\textbullet]
-{Director of Athletics}{January 2020\textendash April 2020}
-{Chosen by the University of Waterloo Engineering Society to be the Director of Athletics for Winter 2020. Organized athletic events for engineering students campus wide throughout the term}
+{UW Engineering Society Director of Athletics}{January 2020\textendash April 2020}
+{Organized athletic events for engineering students campus wide}
 
 }
