--- a/sections/summary.tex
+++ b/sections/summary.tex
@@ -3,7 +3,7 @@
 
 \denseouterlist{
 \entry{\textbf{97\% average in University of Waterloo Data Structures and Algorithms: } beating the class median by 20\%}
-\entry{\textbf{Lead and founding front-end engineer at Kinme Technologies: } Wrote and deployed entire front-end web app from scratch over the course of 4 months}
-\entry{\textbf{Worked two prior Software Developer roles for both Android and Web at SAP inc.: } wrote many features used by hundreds of thousands of clients on a daily basis to manage their businesses}
-\entry{\textbf{Respected student leader at the University of Waterloo: } performed as the Athletic Director for the University of Waterloo Engineering Society and is currently the Class representative of Electrical and Computer Engineering Class of 2023}
+\entry{\textbf{Interned twice at Facebook/Meta: } Wrote several important web applications, one of which is used by thousands of Artificial Intelligence researchers and another by many major teams at Meta}
+\entry{\textbf{Lead and founding front end engineer at Kinme Technologies: } Wrote and deployed entire front end web app from scratch over the course of 4 months for a startup company in the real-estate field}
+\entry{\textbf{Respected student leader at the University of Waterloo: } performed as the Athletic Director for the Engineering Society and is was the Class Representative of the Computer Engineering Class of 2023}
 }
