--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,25 +1,22 @@
 
 \section{Projects}
 
-See full list of projects on \website{github.com/sghmk12}
+See full list of projects on \url{https://github.com/sghmk12}
 
 \outerlist{
 
-\entry{\textbf{Smart Traffic App: } Flask / Python, Matlab}
+\entry{\textbf{AI Real Estate Price Estimator: } React / Typescript}
 
 \innerlist{
-	\entry{Two of my peers and I developed the Smart Traffic Monitor to practically apply our knowledge of \textbf{Matlab} and \textbf{Python} to process raw data from users and produce analytics in a meaningful way}
-	\entryextra{Our project consists of a monolithic web application written in \textbf{Flask} which allows users to dynamically generate data about videos of traffic using a Matlab script. Our application compares pre-processed and processed videos and produces a graph of the amounts of cars on the road at any given time}
-	\entry{\textbf{Demo:} \url{https://traffic.xor.dev} | \textbf{Git:} \url{https://github.com/SarvathSharma/Smart-Traffic-Control-System}}
+	\entry{\textbf{Typescript} based \textbf{React} app deployed using an \textbf{Express.js} server allows users in Toronto to search up their home addresses and use information about their house to predict its approximate value}
+	\entryextra{App demonstrates appropriate use of typescript conventions, the \textbf{Google Maps Javascript API}, as well as \textbf{Chakra UI}}
+	\entry{\textbf{Git:} \url{https://github.com/sghmk12/AI-Real-Estate-Valuator-UI}}
 }
 
-\entry{\textbf{Smart Coffee Mug: } Arduino / C++}
+\entry{\textbf{Smart Traffic App: } Flask / Python, Matlab, HTML, CSS}
 
 \innerlist{
-	\entry {I love coffee, so I decided to make a machine to help me drink my coffee safely. The Smart Coffee Mug was developed using an Arduino board programmed in C++ using Onewire libraries to control its components}
-	\entryextra{It consists of a Coffee Cup, Servo Motor, Temperature Sensor, Touch Sensor, Serial Display and Speaker}
-	\entryextra{Firstly the mug constantly samples and displays the temperature of the beverage in the mug. It opens the lid of the cup whenever a user picks up the contraption. Furthermore, it keeps the lid open for the beverage inside the mug to cool if the beverage is too hot and automatically closes at the ideal temperature. Finally, it alerts users who pick up the contraption when it is too hot}
-	\entry{\textbf{Git:} \url{https://github.com/sghmk12/SmartCoffeeMug}}
+	\entry{\textbf{Git:} \url{https://github.com/SarvathSharma/Smart-Traffic-Control-System}}
 }
 
 }
