--- a/sections/education.tex
+++ b/sections/education.tex
@@ -5,5 +5,5 @@
 
 \entrybig
 {\textbf{University of Waterloo}}{Waterloo, Ontario}
-{Bachelor's of Applied Science, Honours Computer Engineering}{2018\textendash Present}
+{Bachelor's of Applied Science, Honours Computer Engineering}{2018\textendash 2023 (Predicted)}
 }
