--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -4,55 +4,52 @@
 \outerlist{
 
 \entrybig
-	{\textbf{Facebook/Meta}}{New York, New York}
-	{Front end Engineer}{January 2022\textendash April 2022}
+    {\textbf{Federato AI}}{Palo Alto, California}
+    {Frontend Engineer / Software Engineer}{August 2022 \textendash Present}
 \innerlist{
-	\entry{Developed a core infrastructure application from the ground up using \textbf{React.js, Recoil and Flow.js}}
-	\entry{Application consisted of many complex \textbf{graph traversal and manipulation algorithms} which helped process detailed information}
-	\entry{Made use of \textbf{virtualized tables} and other advanced front end technologies}
-	\entry{Developed back-end services to complement web application using \textbf{PHP/Hack}}
-	\entry{Consistently made unique and documented \textbf{architectural design proposals} to larger team in order to facilitate deep discussions about the implementation of \textbf{industry best practices} in complex and obscure algorithms and data structures}
-    \entry{Talked with designers and customers to ensure that product met all use cases and \textbf{accessibility standards} whilst maintaining a high quality user experience}
+    \entry{Developing the web application / interfact for the next generation of \textbf{Artificial Intelligence Software} for \textbf{Insurance Risk Analyzers} using \textbf{React.js, Typescript and Graphql}}
+    \entry{Constructing a unique \textbf{React design library} for use within all Federato applications meeting \textbf{modern accessibility standards}}
+    \entry{Communicating with design and UX team to create \textbf{accessible and efficient} interfaces for customers}
 }
 
 \entrybig
-	{\textbf{Facebook/Meta}}{New York, New York}
-	{Front end Engineer}{January 2021\textendash April 2021}
+	{\textbf{Facebook / Meta}}{New York, New York}
+	{Fullstack Engineer / Front end Engineer}{January 2022 \textendash April 2022}
 \innerlist{
-	\entry{Created an animated interactive 3D environment on React by using \textbf{Three.js} to load an Autodesk FBX file onto a \textbf{WebGL} engine. Used \textbf{GSAP} to help animate the 3D scene}
-	\entry{Contributed to the open source Mephisto project: \textbf{\url{https://www.github.com/facebookresearch/mephisto}}, a service that allows thousands of users to crowdsource artificial intelligence data}
-	\entry{Developed unique \textbf{end to end testing framework} from scratch using \textbf{Javascript fundamentals} to test monolithic \textbf{Python Flask apps} with \textbf{Node.js concurrency, Jest and Puppeteer}}
-	\entry{Developed command line interfaces for Mephisto to process data using the Python \textbf{Click} framework}
-	\entry{Developed a \textbf{fullstack monolithic web application} for Mephisto using \textbf{Flask and React}. The app was published to a React template found in NPM as \textbf{"cra-template-mephisto-review"}. App includes complex features like a \textbf{modular plug-in architecture}}
-	\entry{Upgraded an existing \textbf{React hook} to allow for more diverse functionality. The hook is published to NPM as \textbf{"mephisto-review-hook"}}
+	\entry{Developed core infrastructure application consisting of many complex graph traversal algorithms from scratch using \textbf{React.js, Recoil and Flow.js}}
+	\entry{Made use of \textbf{virtualized tables} and other advanced front-end techniques}
+	\entry{Developed back-end services to complement web application using \textbf{PHP / Hack}}
+	\entry{Made unique \textbf{architectural design proposals} to facilitate the execution of \textbf{industry best practices} in complex and obscure algorithms, data structures and UI while maintaining \textbf{accessibility standards}}
+}
+
+\entrybig
+	{\textbf{Facebook / Meta}}{New York, New York}
+	{Fullstack Engineer / Frontend Engineer}{January 2021 \textendash April 2021}
+\innerlist{
+	\entry{Created an animated interactive 3D environment on \textbf{React} by using \textbf{Three.js} and \textbf{GSAP} to load and animate an \textbf{Autodesk} \textbf{FBX} file via the \textbf{WebGL} engine}
+	\entry{Contributed to open source Mephisto project: \textbf{\website{github.com/facebookresearch/mephisto}}, a service for \textbf{Amazon MTurk} helping thousands of users crowdsource artificial intelligence data}
+	\entry{Developed unique \textbf{end to end testing framework from scratch} using \textbf{Javascript, Node.js, Jest} and \textbf{Puppeteer} to test monolithic \textbf{Python Flask apps} using fundamental concepts of \textbf{concurrency}}
+	\entry{Developed command line interface using the Python \textbf{Click} framework}
+	\entry{Developed a \textbf{fullstack monolithic web application} using \textbf{Flask and React} published as a react template named \textbf{"cra-template-mephisto-review"}}
+	\entry{Upgraded existing \textbf{React hook} published to NPM as \textbf{"mephisto-review-hook"}}
 }
 
 \entrybig
 	{\textbf{Kinme Technologies}}{Toronto, Ontario}
-	{Lead Front end Engineer}{May 2020\textendash December 2020}
+	{Lead Frontend Engineer / UI Engineer}{May 2020 \textendash December 2020}
 \innerlist{
-	\entry{\textbf{Lead} the founding of Kinme, a buying and selling platform for Canadian real estate services}
+	\entry{Lead the founding of Kinme, a buying and selling platform for Canadian real estate services}
 	\entry{Engineered all initial front end facets of the platform \textbf{independently and from scratch} using \textbf{React.js} deployed to an \textbf{Express.js} server with an \textbf{NGINX} proxy on an \textbf{AWS EC2} container}
-	\entry{App manages AJAX calls via \textbf{Axios}, state using \textbf{Redux}, routing with \textbf{React-Router}, and uses \textbf{Material UI}}
-	\entry{Currently serving a private beta for \textbf{100} or so clients}
+	\entry{App was built using \textbf{Axios}, \textbf{Redux}, \textbf{React-Router}, and \textbf{Material UI}}
+	\entry{Currently serving a private beta for \textbf{100} or so clients at \website{kinme.ca}}
 }
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Big Data Tooling Developer (Full Stack Developer)}{September 2019\textendash December 2019}
-\innerlist{
-	\entry {Redesigned the front-end of multiple SAP Data Tooling Websites using \textbf{JavaScript} and \textbf{XML}}
-	\entry{Wrote detailed \textbf{JUnit}, \textbf{JavaScript} unit and \textbf{JavaScript} component tests for all features and fixes published to SAP codebases, bringing SAP’s coverage up to an extensive 83.5\% rate}
-    \entry{Programmed API in \textbf{Java} to send out more detailed SQL queries to SAP dataservers}
-}
+	{Big Data Tooling Developer (Full Stack Developer) | JavaScript, Java, JUnit, XML}{September 2019 \textendash December 2019}
 
 \entrybig
 	{\textbf{SAP}}{Waterloo, Ontario}
-	{Android SDK Developer}{January 2019\textendash April 2019}
-\innerlist{
-	\entry {Developed algorithms in \textbf{Java} to enhance performance and functionality of SAP Cloud Android Applications}
-	\entry{Developed UI and UX of SAP Cloud Android Applications in \textbf{XML} to be more comprehensive for new users}
-	\entry{Debugged Android applications and designed Android \textbf{JUnit} tests for all features and fixes written}
-}
+	{Android SDK Developer | Java, JUnit XML,}{January 2019 \textendash April 2019}
 
 }
