--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,18 +5,21 @@ See full list of projects on \url{https://github.com/sghmk12}
 
 \outerlist{
 
-\entry{\textbf{AI Real Estate Price Estimator: } React / Typescript}
+
+
+\entry{\textbf{Shipsolver: } React / TypeScript, Flask / Python, HTML / CSS}
 
 \innerlist{
-	\entry{\textbf{Typescript} based \textbf{React} app deployed using an \textbf{Express.js} server allows users in Toronto to search up their home addresses and use information about their house to predict its approximate value}
-	\entryextra{App demonstrates appropriate use of typescript conventions, the \textbf{Google Maps Javascript API}, as well as \textbf{Chakra UI}}
-	\entry{\textbf{Git:} \url{https://github.com/sghmk12/AI-Real-Estate-Valuator-UI}}
+	\entry{Working part-time as CTO for small startup team creating a logistics management solution for small warehouses in Ontario, Canada}
+	\entry{Working with one customer to develop a \textbf{SAAS} application to process shipment delivery tickets and manage employees}
+	\entry{Expected to launch MVP in April 2023}
 }
 
-\entry{\textbf{Smart Traffic App: } Flask / Python, Matlab, HTML, CSS}
+\entry{\textbf{AI Real Estate Price Estimator: } React / Typescript, Chakra UI, Google Maps API}
 
 \innerlist{
-	\entry{\textbf{Git:} \url{https://github.com/SarvathSharma/Smart-Traffic-Control-System}}
+	\entry{\textbf{Typescript} based \textbf{React} app deployed using an \textbf{Express.js} server allows users to find AI approximated home prices in Toronto}
+	\entry{\textbf{Git:} \website{github.com/sghmk12/AI-Real-Estate-Valuator-UI}}
 }
 
 }
